# Machine-Learning-in-ROS

./: README.md
car_ws/src/car_simulation/: CMakeLists.txt  package.xml
car_ws/src/car_simulation/launch/: car_simulation.launch  car_spawn.launch
car_ws/src/car_simulation/plugins/: PriusHybridPlugin.cc  PriusHybridPlugin.hh
car_ws/src/car_simulation/worlds/: road.world
car_ws/src/perception/: package.xml
car_ws/src/perception/scripts/: car_follower.py  lane_detector.py  lane_follower.py
turtlebot3_ws/src/turtlebot3_neural_network/: CMakeLists.txt  package.xml
turtlebot3_ws/src/turtlebot3_neural_network/launch/: turtlebot3_square.launch  turtlebot3_world.launch
turtlebot3_ws/src/turtlebot3_neural_network/scripts/: data_recorder.py  data_train.py  model.hdf5  obstacle_avoidance.py  obstacle_avoidance_tf.py
turtlebot3_ws/src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
